--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
 		<maven.compiler.source>11</maven.compiler.source>
 		<maven.compiler.target>11</maven.compiler.target>
 		<postgresql.version>42.5.0</postgresql.version>
+		<hibernate.version>5.6.10.Final</hibernate.version>
 	</properties>
 	
 	<dependencies>
@@ -16,6 +17,11 @@
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
 			<version>${postgresql.version}</version>
+		</dependency>
+			<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-entitymanager</artifactId>
+			<version>${hibernate.version}</version>
 		</dependency>
 	</dependencies>
 
