--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,10 @@
 		<maven.compiler.source>11</maven.compiler.source>
 		<maven.compiler.target>11</maven.compiler.target>
 		<postgresql.version>42.5.0</postgresql.version>
+		<hibernate.version>5.6.10.Final</hibernate.version>
+		<junit.version>5.9.0</junit.version>
+		<mockito-junit.version>4.7.0</mockito-junit.version>
+		<h2.version>2.1.214</h2.version>
 	</properties>
 	
 	<dependencies>
@@ -16,6 +20,36 @@
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
 			<version>${postgresql.version}</version>
+		</dependency>
+		<!-- JPA/HIBERNATE -->
+		<dependency>
+		    <groupId>org.hibernate</groupId>
+		    <artifactId>hibernate-entitymanager</artifactId>
+		    <version>${hibernate.version}</version>
+		</dependency>
+		
+		
+		<!-- Tests avec JUNIT et Mockito -->
+		<dependency>
+		    <groupId>org.junit.jupiter</groupId>
+		    <artifactId>junit-jupiter-api</artifactId>
+		    <version>${junit.version}</version>
+		    <scope>test</scope>
+		</dependency>
+		
+		<dependency>
+		    <groupId>org.mockito</groupId>
+		    <artifactId>mockito-junit-jupiter</artifactId>
+		    <version>${mockito-junit.version}</version>
+		    <scope>test</scope>
+		</dependency>
+		
+		<!-- Base de données embarquée (Embedded Database), en mémoire -->
+		<dependency>
+		    <groupId>com.h2database</groupId>
+		    <artifactId>h2</artifactId>
+		    <version>${h2.version}</version>
+		    <scope>test</scope>
 		</dependency>
 	</dependencies>
 
