--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,9 @@
 		<junit.version>5.9.0</junit.version>
 		<mockito-junit.version>4.7.0</mockito-junit.version>
 		<h2.version>2.1.214</h2.version>
+		<spring-data.version>2.7.2</spring-data.version>
+		<spring.version>5.3.22</spring.version>
+		<dbcp2.version>2.9.0</dbcp2.version>
 	</properties>
 	
 	<dependencies>
@@ -51,6 +54,59 @@
 		    <artifactId>h2</artifactId>
 		    <version>${h2.version}</version>
 		    <scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+
+		<!-- SPRING ORM -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-orm</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+
+
+		
+	<!-- Pool Commons DBCP2 -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-dbcp2</artifactId>
+			<version>${dbcp2.version}</version>
+		</dependency>
+
+		<!-- Tests avec JUNIT et Mockito -->
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-api</artifactId>
+			<version>${junit.version}</version>
+			<scope>test</scope>
+		</dependency>
+
+		
+
+
+		<!-- https://mvnrepository.com/artifact/org.springframework.data/spring-data-jpa -->
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-jpa</artifactId>
+			<version>${spring-data.version}</version>
+		</dependency>
+
+		<!-- Spring TEST  -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+			<version>${spring.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-junit-jupiter</artifactId>
+			<version>${mockito-junit.version}</version>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 
