--- a/AngularProjetEchec/package.json
+++ b/AngularProjetEchec/package.json
@@ -18,6 +18,8 @@
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "@stomp/ng2-stompjs": "^8.0.0",
+    "@types/sockjs-client": "^1.5.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
