--- a/AngularProjetEchec/package.json
+++ b/AngularProjetEchec/package.json
@@ -21,8 +21,10 @@
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
     "@stomp/ng2-stompjs": "^8.0.0",
+    "@stomp/stompjs": "^6.1.2",
     "@types/sockjs-client": "^1.5.1",
     "rxjs": "~7.5.0",
+    "sockjs-client": "^1.6.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
